--- a/frontend/Log In/Login.css
+++ b/frontend/Log In/Login.css
@@ -12,7 +12,7 @@ body::before {
     position: fixed;
     inset: 0;
     z-index: -1;
-    background-image: url("frontend\login_imgs\fondocatedral3.png");
+    background-image: url("../imagesforlogin/fondocatedral3.png");
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 1;
@@ -123,7 +123,7 @@ body.fondo-opaco::before {
     align-items: center;
     width: 350px;
     z-index: 10; /* Asegura que esté por encima de otros elementos */
-}
+}   
 
 .form-vertical {
     display: flex;
