--- a/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso2.html
+++ b/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso2.html
@@ -19,7 +19,7 @@
                     {{ form.numero_entrevista.label_tag }} {{ form.numero_entrevista }}
                 </div>
                 <div class="form-group">
-                    {{ form.fecha.label_tag }} {{ form.fecha }}
+                    {{ form.fecha_hora.label_tag }} {{ form.fecha_hora }}
                 </div>
             </div>
 
@@ -68,4 +68,3 @@
     </div>
 </body>
 </html>
-
