--- a/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso6.html
+++ b/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso6.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Formulario 6 - Resolución de Apelación</title>
+  <title>Formulario 6: Resolución de Apelación</title>
   <link rel="stylesheet" href="{% static 'css/Form1styles.css'%}">
 </head>
 <body>
