--- a/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso7.html
+++ b/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso7.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Formulario 7 - Encuesta “A mí me sucede que…”</title>
+  <title>Formulario 7: Encuesta “A mí me sucede que…”</title>
   <link rel="stylesheet" href="{% static 'css/Form1styles.css'%}">
 </head>
 <body>
