--- a/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso2.html
+++ b/Proyecto Arzo/protocolo1/templates/protocolo1/formulario_paso2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h1>Ficha de Entrevista</h1>
+        <h1>Formulario 2: Ficha de Entrevista</h1>
         <form method="post">
             {% csrf_token %}
             {{ form.non_field_errors }}
